[apache/helix] -- Make Helix Java-8 complaint